--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>gabrielle esscence eau de parfum</h1>
                 <P>A floral, solar and voluptous interpretaion cpmposed by Olivier Polge ,Perfumer-Creator for the house of CHANEL.</P>
                 <div class="price">$149.99 <span>$169.99</span></div>
-                <div class="button"><img src="/images/icon-cart.svg">Add to Card</div>
+                <div class="button"><img src="./images/icon-cart.svg">Add to Card</div>
             </div>
         </div>
     </div>
